add curriculum images

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#curr">Curriculum</a>
+            <a class="nav-link js-scroll-trigger" href="#curriculum">Curriculum</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#library">Library</a>
@@ -78,21 +78,35 @@
   </section> -->
 
   <!-- Projects Section -->
-  <!-- <section id="projects" class="projects-section bg-light">
-    <div class="container"> -->
+  <section id="curriculum" class="projects-section bg-light">
+    <div class="container">
 
       <!-- Featured Project Row -->
-      <!-- <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+      <div class="row align-items-center no-gutters mb-4 mb-lg-5">
         <div class="col-xl-8 col-lg-7">
-          <img class="img-fluid mb-3 mb-lg-0" src="img/bg-masthead.jpg" alt="">
+          <img class="img-fluid mb-3 mb-lg-0" src="img/size-narrow.png" alt="">
         </div>
         <div class="col-xl-4 col-lg-5">
-          <div class="featured-text text-center text-lg-left">
-            <h4>Shoreline</h4>
-            <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
+          <div class="featured-text-right text-center text-lg-left">
+            <h4>Size Scale</h4>
+            <p class="text-black-50 mb-0">Internalizing and vizualizing the types of physical structures that exist across the entire size scale of the universe lays the foundation for understanding the theories and concepts that exist around them.</p>
           </div>
         </div>
-      </div> -->
+      </div>
+      <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+        <div class="col-xl-8 col-lg-7 d-lg-none">
+          <img class="img-fluid mb-3 mb-lg-0" src="img/time-simp.png" alt="">
+        </div>
+        <div class="col-xl-4 col-lg-5">
+          <div class="featured-text-left text-center text-lg-right">
+            <h4>Time Scale</h4>
+            <p class="text-black-50 mb-0">Imagining and understanding how complexity emerges throughout the history of the universe leads to insights about how energy flows and where everything will likely end up.</p>
+          </div>
+        </div>
+        <div class="col-xl-8 col-lg-7 d-none d-lg-block">
+          <img class="img-fluid mb-3 mb-lg-0" src="img/time-simp.png" alt="">
+        </div>
+      </div>
 
       <!-- Project One Row -->
       <!-- <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
@@ -103,8 +117,8 @@
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
-                <h4 class="text-white">Misty</h4>
-                <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else, along with a description.</p>
+                <h4 class="text-white">Time Scale</h4>
+                <p class="mb-0 text-white-50">Imagining and understanding how complexity emerges thoughout the history of the universe leads to insights about how energy flows and where we're everything will likely end up.</p>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
             </div>
@@ -130,8 +144,8 @@
         </div>
       </div>
 
-    </div>
-  </section> -->
+    </div> -->
+  </section>
 
   <!-- Signup Section -->
   <section id='signup' class="signup-section">
