--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <!-- Featured Project Row -->
       <div class="row align-items-center no-gutters mb-4 mb-lg-5">
         <div class="col-xl-8 col-lg-7">
-          <img class="img-fluid mb-3 mb-lg-0" src="img/size-narrow.png" alt="">
+          <img class="img-fluid mb-3 mb-lg-0" src="img/size-narrow.PNG" alt="">
         </div>
         <div class="col-xl-4 col-lg-5">
           <div class="featured-text-right text-center text-lg-left">
@@ -95,7 +95,7 @@
       </div>
       <div class="row align-items-center no-gutters mb-4 mb-lg-5">
         <div class="col-xl-8 col-lg-7 d-lg-none">
-          <img class="img-fluid mb-3 mb-lg-0" src="img/time-simp.png" alt="">
+          <img class="img-fluid mb-3 mb-lg-0" src="img/time-simp.PNG" alt="">
         </div>
         <div class="col-xl-4 col-lg-5">
           <div class="featured-text-left text-center text-lg-right">
