--- a/index.html
+++ b/index.html
@@ -37,9 +37,6 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">About</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#curriculum">Curriculum</a>
           </li>
           <li class="nav-item">
@@ -47,6 +44,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#store">Store</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
         </ul>
       </div>
@@ -58,30 +58,29 @@
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">
         <h1 class="mx-auto my-0 ">Knowlo</h1>
-        <h2 class="mx-auto mt-2 mb-5">For the design and proliferation of knowledge.</h2>
+        <h2 class="mx-auto mt-2 mb-5">For the proliferation of knowledge.</h2>
         <!-- <a href="#about" class="btn btn-primary js-scroll-trigger">Get Started</a> -->
       </div>
     </div>
   </header>
 
-  <!-- About Section -->
-  <!-- <section id="about" class="about-section text-center">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 mx-auto">
-          <h2 class="text-white mb-4">Expanding insight</h2>
-          <p class="text-white-50">You may have to be a genius to develop the theory of relativity, but you don't have to be a genius to understand it. Knowlo aims to make humanities most astouding insights comprehensible to people of all ages by provide large-scale frameworks for thinking about science, technology, and the universe.</p>
-        </div>
-      </div>
-      <img src="img/ipad.png" class="img-fluid" alt="">
-    </div>
-  </section> -->
 
-  <!-- Projects Section -->
+  <!-- Curriculum Section -->
   <section id="curriculum" class="projects-section bg-light">
     <div class="container">
 
-      <!-- Featured Project Row -->
+      <div class="container">
+        <div class="row" style="margin-bottom: 100px;">
+          <div class="col-lg-8 mx-auto">
+            <h1 class="text-center mb-4">Universal Literacy</h1>
+            <h5 class="text-center mb-4 text-black-50">Context for the Sciences</h5>
+            <p class="text-center text-black-50">Seeing the big picture relationships between major scientific disicplines and milestone events throughout the history of the universe makes it easier to dive into the details.</p>
+            <p class="text-center text-black-50 mb-0">You may have to be a genius to come up with the theory of relativity, but you don't have to be a genius to understand it. <span class='primary-theme'>Universal Literacy</span> aims to make humanities most astounding insights across Time and Size comprehensible to people of all ages by providing large-scale frameworks for thinking about science, technology, and the universe.</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- size and time -->
       <div class="row align-items-center no-gutters mb-4 mb-lg-5">
         <div class="col-xl-8 col-lg-7">
           <img class="img-fluid mb-3 mb-lg-0" src="img/size-narrow.PNG" alt="">
@@ -100,31 +99,37 @@
         <div class="col-xl-4 col-lg-5">
           <div class="featured-text-left text-center text-lg-right">
             <h4>Time Scale</h4>
-            <p class="text-black-50 mb-0">Imagining and understanding how complexity emerges throughout the history of the universe leads to insights about how energy flows and where everything will likely end up.</p>
+            <p class="text-black-50 mb-0">Imagining and understanding how structures emerge throughout the history of the universe leads to insights about how energy flows and where everything will likely end up.</p>
           </div>
         </div>
         <div class="col-xl-8 col-lg-7 d-none d-lg-block">
-          <img class="img-fluid mb-3 mb-lg-0" src="img/time-simp.png" alt="">
+          <img class="img-fluid mb-3 mb-lg-0" src="img/time-simp.PNG" alt="">
         </div>
       </div>
 
       <!-- Project One Row -->
-      <!-- <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+      <div id="library" class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/demo-image-01.jpg" alt="">
+            <a href="https://knowlo.io" target="_blank">
+              <img class="img-fluid d-none d-lg-block" src="img/library.PNG" alt="">
+              <img class="img-fluid d-lg-none" src="img/library-mobile-wide.PNG" alt="">
+            </a>
         </div>
         <div class="col-lg-6">
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
-                <h4 class="text-white">Time Scale</h4>
-                <p class="mb-0 text-white-50">Imagining and understanding how complexity emerges thoughout the history of the universe leads to insights about how energy flows and where we're everything will likely end up.</p>
+                <h4 class="text-white">Knowlo Library</h4>
+                <p class="mb-0 text-white-50">An explorable collection of the most illuminating science teaching resources. Videos, images, and insights across all disicplines.</p>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
             </div>
           </div>
         </div>
-      </div> -->
+        <div class="pad">
+          <a href="https://knowlo.io" target="_blank"><button class='center-block btn btn-primary'>explore the library now</button></a>
+        </div>
+      </div>
 
       <!-- Project Two Row -->
       <!-- <div class="row justify-content-center no-gutters">
@@ -142,13 +147,13 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
 
-    </div> -->
+    </div>
   </section>
 
   <!-- Signup Section -->
-  <section id='signup' class="signup-section">
+  <section id='contact' class="signup-section">
     <div class="container">
       <div class="row">
         <div class="col-md-10 col-lg-8 mx-auto text-center">
