tweak, icon update

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <header class="masthead">
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">
-        <img class='owl-icon' src="/img/knowlo-owl-bold.png">
+        <img class='owl-icon' src="/img/knowlo-owl-med.png">
         <h1 class="mx-auto my-0 ">Knowlo</h1>
         <h2 class="mx-auto mt-2 mb-5">For the proliferation of knowledge.</h2>
         <!-- <a href="#about" class="btn btn-primary js-scroll-trigger">Get Started</a> -->
